# achitek-ls

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  dist-workspace.toml  flake.nix  justfile  release-plz.toml
crates/achitek-ls/: CHANGELOG.md  Cargo.toml  build.rs
crates/achitek-ls/src/: analysis.rs  editor.rs  lib.rs  main.rs  syntax.rs  workspace.rs
crates/achitek-ls/src/editor/: completion.rs  definition.rs  hover.rs  mod.rs  navigation.rs  reference.rs  rename.rs  shared.rs
crates/achitek-ls/src/handlers/: code_action.rs  completion.rs  definition.rs  did_change.rs  did_close.rs  did_open.rs  document_symbol.rs  folding_range.rs  formatting.rs  hover.rs  mod.rs  notification.rs  prepare_rename.rs  references.rs  rename.rs  request.rs  selection_range.rs  workspace_symbol.rs
crates/achitek-ls/src/lsp/: capabilities.rs  mod.rs  project_diagnostics.rs  publish.rs
crates/achitek-ls/src/server/: dispatch.rs  event_loop.rs  mod.rs  project.rs  state.rs  utils.rs
crates/achitek-ls/tests/: integration.rs  utils.rs
crates/achitek-ls/tests/features/: completion.rs  definition.rs  did_change.rs  did_close.rs  did_open.rs  document_symbol.rs  folding_range.rs  formatting.rs  hover.rs  prepare_rename.rs  references.rs  rename.rs  selection_range.rs  workspace_symbol.rs
crates/achitek-ls/tests/it/: utils.rs
crates/achitek-source/: CHANGELOG.md  Cargo.toml  README.md
crates/achitek-source/src/: lib.rs
crates/achitekfile/: CHANGELOG.md  Cargo.toml  README.md
crates/achitekfile/src/: diagnostics.rs  lib.rs  model.rs  parser.rs  sort.rs
crates/achitekfile/src/analysis/: build_model.rs  diagnostics.rs  mod.rs  syntax.rs  validate.rs
crates/achitekfile/tests/: integration.rs
crates/terafile/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/terafile/src/: diagnostics.rs  lib.rs  model.rs  parser.rs
crates/terafile/src/analysis/: diagnostics.rs  lowering.rs  mod.rs  syntax.rs
crates/terafile/tests/: integration.rs
docs/: ARCHITECTURE.md  CAPABILITIES.md  CONTRIBUTING.md
src/: arguments.rs  lib.rs  main.rs  tree_sitter_tera.rs
src/server/: mod.rs  utils.rs
src/server/handlers/: completion.rs  definition.rs  diagnostics.rs  did_change.rs  did_close.rs  did_open.rs  document_symbol.rs  folding_range.rs  formatting.rs  hover.rs  prepare_rename.rs  references.rs  rename.rs  selection_range.rs  workspace_symbol.rs
