[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
repository = "https://github.com/achitek-org/achitek-ls"
edition = "2024"
rust-version = "1.90.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
# Published workspace crates are consumed from crates.io by default. Uncomment
# while prototyping achitek-ls changes against unpublished achitekfile APIs.
# achitekfile = { path = "crates/achitekfile" }
