[package]
name = "terafile"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors = ["Samuel Joli <samuel.joli.ftn@gmail.com>"]
description = "A tree-sitter backed semantic parser for Tera templates"
readme = "README.md"
repository.workspace = true
license = "MIT OR Apache-2.0"
keywords = ["tera", "parser", "tree-sitter", "templates", "diagnostics"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
achitek-source = { version = "0.1.0", path = "../achitek-source" }
serde = { version = "1.0", features = ["derive"], optional = true }
tree-sitter = "0.26.8"
tree-sitter-language = "0.1.7"

[features]
serde = ["dep:serde", "achitek-source/serde"]

[dev-dependencies]
indoc = "2.0.7"

[build-dependencies]
cc = "1.2.61"

[lints]
workspace = true
